# fractal

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  REGISTRY_PRELOADING_FIX.md  SCHEMA_REGISTRY_STATUS.md  TESTING.md  cabal.project  devenv.nix  fractal-stream.cabal  stack.yaml  test.project
.beads/: issues.jsonl
.github/workflows/: ci.yml
ecma262-regex/: .gitignore  CHANGELOG.md  LICENSE  README.md  UNICODE_TODO.md  ecma262-regex.cabal
ecma262-regex/cbits/: ecma262_regex_wrapper.c  utf8_utf16.c  utf8_utf16.h
ecma262-regex/examples/: Main.hs
ecma262-regex/src/Text/Regex/: ECMA262.hs
ecma262-regex/src/Text/Regex/ECMA262/: Base.hs  Internal.hs
ecma262-regex/test/Text/Regex/: ECMA262Spec.hs
ecma262-regex/test/Text/Regex/ECMA262/: BaseSpec.hs.disabled
examples/: LayerExample.hs
examples/redis/: Main.hs
fractal-idna2008/: LICENSE
fractal-idna2008/benchmark/: Main.hs
fractal-layer/: DIAGNOSTICS_INTEGRATION.md  README_DIAGNOSTICS.md  fractal-layer.cabal
fractal-layer/examples/: DiagnosticsExample.hs
fractal-layer/src/Fractal/: Layer.hs
fractal-layer/src/Fractal/Layer/: Diagnostics.hs  Interceptor.hs
fractal-layer/test/Fractal/Layer/: DiagnosticsSpec.hs  LayerSpec.hs
fractal-openapi/: README.md  SPEC.md  fractal-openapi.cabal
fractal-openapi/examples/: BasicValidation.hs  CodegenExample.hs  CustomVocabulary.hs
fractal-openapi/src/Fractal/: JSONPointer.hs  JsonSchema.hs  OpenApi.hs
fractal-openapi/src/Fractal/JsonSchema/: Dialect.hs  EmbeddedMetaschemas.hs  Keyword.hs  Metadata.hs  MetaschemaValidation.hs  Parser.hs  ReferenceLoader.hs  Regex.hs  Renderer.hs  Types.hs  Validator.hs  Vocabulary.hs
fractal-openapi/src/Fractal/JsonSchema/Codegen/: Types.hs
fractal-openapi/src/Fractal/JsonSchema/EmbeddedMetaschemas/: Raw.hs
fractal-openapi/src/Fractal/JsonSchema/Keyword/: Compile.hs  Monadic.hs  Types.hs  Validate.hs
fractal-openapi/src/Fractal/JsonSchema/Keywords/: AdditionalProperties.hs  AllOf.hs  AnyOf.hs  Common.hs  Conditional.hs  Const.hs  Contains.hs  ContentEncoding.hs  ContentMediaType.hs  Dependencies.hs  DependentRequired.hs  DependentSchemas.hs  Enum.hs  ExclusiveMaximum.hs  ExclusiveMinimum.hs  Format.hs  FormatKeyword.hs  Items.hs  MaxItems.hs  MaxLength.hs  MaxProperties.hs  Maximum.hs  MinItems.hs  MinLength.hs  MinProperties.hs  Minimum.hs  MultipleOf.hs  Navigation.hs  Not.hs  Numeric.hs  OneOf.hs  Pattern.hs  PatternProperties.hs  PrefixItems.hs  Properties.hs  PropertyNames.hs  Ref.hs  Registry.hs  Required.hs  Standard.hs  (+5 more)
fractal-openapi/src/Fractal/JsonSchema/Keywords/Draft04/: ExclusiveMinimum.hs  Maximum.hs  Minimum.hs
fractal-openapi/src/Fractal/JsonSchema/Parser/: Extended.hs  Internal.hs
fractal-openapi/src/Fractal/JsonSchema/Validator/: Annotations.hs  Extended.hs  Result.hs
fractal-openapi/src/Fractal/JsonSchema/Vocabulary/: Registry.hs  Types.hs  Validation.hs
fractal-openapi/src/Fractal/OpenApi/: Codegen.hs  JsonSchema.hs  Parser.hs  Renderer.hs  Types.hs  Validator.hs
fractal-openapi/src/Fractal/OpenApi/Codegen/: Aeson.hs  Core.hs  Strategy.hs  TH.hs
fractal-openapi/src/Fractal/OpenApi/JsonSchema/: Dialect.hs  Metadata.hs  Parser.hs  Renderer.hs  Types.hs  Validator.hs  Vocabulary.hs
fractal-openapi/test/Fractal/JsonSchema/: ComplianceSpec.hs  DialectFormatSpec.hs  DialectSpec.hs  EmbeddedMetaschemasSpec.hs  IntegrationSpec.hs  JSONPointerSpec.hs  ParserDialectSpec.hs  ParserSpec.hs  TestHelpers.hs  UnknownKeywordSpec.hs  ValidatorSpec.hs  VocabularySpec.hs
fractal-openapi/test/Fractal/JsonSchema/Keyword/: KeywordSpec.hs  MonadicSpec.hs  NavigationSpec.hs
fractal-openapi/test/Fractal/JsonSchema/Keywords/: ApplicatorSpec.hs  StandardSpec.hs
fractal-openapi/test/Fractal/JsonSchema/Parser/: ExtendedSpec.hs
fractal-openapi/test/Fractal/JsonSchema/Validator/: AnnotationSpec.hs  ExtendedSpec.hs
fractal-openapi/test/Fractal/JsonSchema/Vocabulary/: RegistrySpec.hs  ValidationSpec.hs
fractal-openapi/test/Fractal/OpenApi/: ParserSpec.hs  ValidatorSpec.hs
fractal-openapi/test/Fractal/OpenApi/Codegen/: AesonSpec.hs  IntegrationSpec.hs  StrategySpec.hs  THSpec.hs
fractal-openapi/test/Fractal/OpenApi/JsonSchema/: ParserSpec.hs  PatternSpec.hs  ValidatorSpec.hs  VocabularySpec.hs
fractal-schema/: fractal-schema.cabal
fractal-schema/src/Fractal/Schema/: Registry.hs  Types.hs
fractal-schema/src/Fractal/Schema/Backend/: Class.hs  PostgreSQL.hs
fractal-schema/test/: Spec.hs  TestDatabase.hs
fractal-schema/test/Fractal/Schema/: ClientSpec.hs
fractal-stream/: fractal-stream.cabal
fractal-stream/examples/redis/: Main.hs
fractal-stream/src/Fractal/: Stream.hs
fractal-stream/src/Fractal/Schema/: Registry.hs
fractal-stream/src/Fractal/Schema/Backend/: PostgreSQL.hs
fractal-stream/src/Fractal/Stream/: Outbox.hs
fractal-stream/src/Fractal/Yesod/: Partition.hs
fractal-stream/test/: Spec.hs
fractal-stream/test/Fractal/Schema/: ClientSpec.hs
history/: keyword-migration-progress.md  keyword-navigation-design.md  monadic-compilation-design.md
idn/: .gitignore  CHANGELOG.md  README.md  idn.cabal
idn/benchmark/: Main.hs
idn/src/Data/Text/: IDN.hs  Punycode.hs
idn/src/Data/Text/IDN/: Types.hs
idn/src/Data/Text/IDN/Internal/: Punycode.hs  Unicode.hs  Validation.hs
idn/test/Data/Text/: IDNSpec.hs  PunycodeSpec.hs
idn/test/Data/Text/IDN/: BidiSpec.hs  PropertySpec.hs  RFC5893Spec.hs
idn/test/Data/Text/IDN/Internal/: UnicodeSpec.hs  ValidationSpec.hs
idn/tools/: download-unicode-data.sh
specs/001-json-schema-implementation/: COMPLIANCE_REPORT.md  FINAL_COMPLIANCE_REPORT.md  IMPLEMENTATION_STATUS.md  MVP_COMPLETE.md  SESSION_SUMMARY.md  TEST_SUITE_INTEGRATION.md  US1_COMPLETE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-json-schema-implementation/contracts/: codegen-contract.md  parser-contract.md  validator-contract.md  vocabulary-contract.md
specs/002-pluggable-json-schema/: spec.md
specs/002-pluggable-json-schema/checklists/: requirements.md
src/Fractal/: Layer.hs  Stream.hs
src/Fractal/Schema/: Client.hs  (+2 more)
test/: Spec.hs
(+23 files in other folders)
