cabal-version:      3.0
name:               fractal-stream
version:            0.1.0.0
synopsis:           Event streaming library with Redis/Kinesis backends
description:        A high-level streaming interface implementing event sourcing patterns,
                    supporting both Redis (for local development) and Kinesis (for production).
                    Features include exactly-once delivery via outbox pattern, schema versioning,
                    and support for building event-sourced projections.
license:            BSD-3-Clause
author:             Your Name
maintainer:         your.email@example.com
category:           Database, Streaming
build-type:         Simple

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-home-modules
                 -Wpartial-fields -Wredundant-constraints

common extensions
    default-extensions: OverloadedStrings
                      , RecordWildCards
                      , DeriveGeneric
                      , DerivingStrategies
                      , LambdaCase
                      , GeneralizedNewtypeDeriving
                      , RankNTypes
                      , ScopedTypeVariables
                      , BlockArguments

library
    import:           warnings, extensions
    exposed-modules:  Fractal.Stream
                    , Fractal.Stream.Types
                    , Fractal.Stream.Class
                    , Fractal.Stream.Backend.Redis
                    , Fractal.Stream.Outbox
                    , Fractal.Schema.Registry
                    , Fractal.Schema.Backend.Class
                    , Fractal.Schema.Backend.PostgreSQL
                    , Fractal.Layer
    build-depends:    base >=4.17.0.0
                    , aeson >= 2.0 && < 3
                    , bytestring >= 0.11 && < 1
                    , containers >= 0.6 && < 1
                    , hedis >= 0.15 && < 1
                    , hasql >= 1.6 && < 2
                    , hasql-th >= 0.4 && < 1
                    , hs-opentelemetry-api
                    , ki
                    , lens >= 5.0 && < 6
                    , resourcet >= 1.2 && < 2
                    , mtl >= 2.2 && < 3
                    , stm >= 2.5 && < 3
                    , text >= 2.0 && < 3
                    , time >= 1.12 && < 2
                    , uuid >= 1.3 && < 2
                    , validation-selective >= 0.1 && < 1
                    , vector >= 0.13 && < 1
                    , unliftio >= 0.2 && < 1
                    , contravariant-extras
                    , selective
                    , servant
                    , servant-server
                    , servant-client
                    , transformers
                    , wai
                    , warp
                    , async >= 2.2 && < 3
                    , hashable >= 1.4 && < 2
                    , unordered-containers >= 0.2 && < 1
                    , profunctors >= 5.6 && < 6
                    , random >= 1.2 && < 2
                    , vinyl
                    , yesod-core
                    , free >= 5.1 && < 6

    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: OverloadedStrings
                      , RecordWildCards
                      , DeriveGeneric
                      , DerivingStrategies
                      , LambdaCase
                      , GeneralizedNewtypeDeriving
                      , RankNTypes

executable fractal-stream-example
    import:           warnings, extensions
    main-is:          Main.hs
    hs-source-dirs:   examples/redis
    build-depends:    base >=4.17.0.0
                    , fractal-stream
                    , aeson
                    , hedis
                    , hasql
                    , text
                    , time
                    , validation-selective
    default-language: Haskell2010

-- executable layer-example
--     import:           warnings, extensions
--     main-is:          LayerExample.hs
--     hs-source-dirs:   examples
--     build-depends:    base >=4.17.0.0
--                     , fractal-stream
--                     , random
--     default-language: Haskell2010

test-suite fractal-stream-test
    import:           warnings, extensions
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    base >=4.17.0.0
                    , mtl
                    , time
                    , vinyl
                    , unliftio
                    , fractal-stream
                    , hspec >= 2.10 && < 3
                    , QuickCheck >= 2.14 && < 3
